# pulseaudio-policy-enforcement

./: Makefile.am  README  configure.ac
debian/: changelog  control  copyright  pulseaudio-policy-enforcement.install  pulseaudio-policy-enforcement.postinst  rules
examples/: xpolicy.conf
fedora/: Makefile  pulseaudio-policy-enforcement.spec.in
meego/: Makefile  pulseaudio-policy-enforcement.spec.in
rpm/: pulseaudio-policy-enforcement.changes  pulseaudio-policy-enforcement.spec  pulseaudio-policy-enforcement.yaml
src/: Makefile.am  card-ext.c  card-ext.h  classify.c  classify.h  client-ext.c  client-ext.h  config-file.c  config-file.h  context.c  context.h  dbusif.c  dbusif.h  index-hash.c  module-ext.c  module-ext.h  module-policy-enforcement-symdef.h  module-policy-enforcement.c  policy-group.c  policy-group.h  sink-ext.c  sink-ext.h  sink-input-ext.c  sink-input-ext.h  source-ext.c  source-ext.h  source-output-ext.c  source-output-ext.h  userdata.h
